manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisdom-portal
  namespace: kube-wisdom
  labels:
    name: wisdom-portal
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: NodePort
  selector:
    app: wisdom-portal
